--- a/_layouts/layout_mom.html
+++ b/_layouts/layout_mom.html
@@ -32,10 +32,10 @@
   <!-- Google Analytics -->
   {% include analytics.html %}
 
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/slick/slick.css" /> 
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/slick/slick-theme.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}static/css/mom.css"/>
-  <link href="{{ site.baseurl }}static/css/slick-lightbox.css" rel="stylesheet"/>  
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/slick/slick.css" /> 
+  <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/slick/slick-theme.css" />
+  <link rel="stylesheet" href="{{ site.url }}/static/css/mom.css"/>
+  <link href="{{ site.url }}/static/css/slick-lightbox.css" rel="stylesheet"/>  
   <link href="https://fonts.googleapis.com/css?family=Allura|Roboto+Condensed|Roboto" rel="stylesheet">
 </head>
 
@@ -57,16 +57,16 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
     crossorigin="anonymous"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="{{ site.baseurl }}static/js/docs.min.js"></script>
-  <script src="{{ site.baseurl }}static/js/main.js"></script>
+  <script src="{{ site.url }}/static/js/docs.min.js"></script>
+  <script src="{{ site.url }}/static/js/main.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="{{ site.baseurl }}static/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="{{ site.url }}/static/js/ie10-viewport-bug-workaround.js"></script>
 
   <!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
-  <script type="text/javascript" src="{{ site.baseurl }}static/slick/slick.min.js"></script>
-  <script src="{{ site.baseurl }}static/js/slick-lightbox.min.js"></script>
-  <script src="{{ site.baseurl }}static/js/mom.js"></script>
+  <script type="text/javascript" src="{{ site.url }}/static/slick/slick.min.js"></script>
+  <script src="{{ site.url }}/static/js/slick-lightbox.min.js"></script>
+  <script src="{{ site.url }}/static/js/mom.js"></script>
 </body>
 
 </html>
