another url update

--- a/_layouts/layout_mom.html
+++ b/_layouts/layout_mom.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
   <!-- Custom styles for this template -->
-  <link href="{{ site.baseurl }}static/css/main.css" rel="stylesheet">
+  <link href="{{ site.url }}/static/css/main.css" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,200bold,400old" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
